# DGSM_PCE_MD

./: README.md
Codes/Borehole/: STi_conv.mat  gen_plots_borehole.m  itr_index.txt  test_borehole.m  ub1_conv.m  uq_borehole.m  val_pts.mat
Codes/Borehole/borehole4D/: borehole4D.m  model_borehole4D.m
Codes/Borehole/borehole5D/: borehole5D.m  model_borehole5D.m
Codes/Borehole/borehole_extra/: borehole.m  borehole_slice.m
Codes/Elliptic_PDE/: STi_conv.mat  elliptic.m  gen_plots_elliptic.m  model_elliptic.m  nsams_eloo_cputime.txt  nsams_ub.txt  test.m  ub1_conv.m  umax.mat
Codes/Elliptic_PDE/elliptic3D/: elliptic3D.m  model_elliptic3D.m  semilinear_elliptic_pde.m  umax.mat
Codes/GenLoop/: gen_loop.m
Codes/Kinetics/: .build_pce19D.m.swp  .gen_samples.m.swp  .run_TChem.bash.swp  TChem.tgz  build_pce19D.m  chem.inp  compute_dgsm.m  gen_plots.m  gen_samples.m  gen_samples_pdf.m  run_TChem.bash
Codes/Kinetics/TChem/: MakeIncl.Vars  MakeIncl.Vars.in  Makefile  README  config.status  configure  configure.in  step1.sh  step4.sh
Codes/Kinetics/TChem/autom4te.cache/: output.0  requests  traces.0
Codes/Kinetics/TChem/config/: ax_compiler_vendor.m4
Codes/Kinetics/TChem/example/: Makefile
Codes/Kinetics/TChem/example/ign-c/: Makefile
Codes/Kinetics/TChem/example/ign-c/run/h2/: chem.inp  cs.hdr  cs.out  h.hdr  h.out  id.txt  id_new.txt  ign  ignsol.hdr  input.setup  kmod.echo  kmod.list  kmod.out  linksNrun.x  removefiles.x  ys.hdr  ys.out
Codes/Kinetics/TChem/example/ign-c/src/: Makefile  doign.c  doignDtSeq.c  doignReinit.c  ign  ign.c  ign.h  initcvode.c  output.c  rhsjac.c  setup.c
Codes/Kinetics/TChem/include/: TC_defs.h  TC_defs.new  TC_interface.h  TC_kmodint.h
Codes/Kinetics/TChem/lib/: Makefile
Codes/Kinetics/TChem/lib/dvode/: ._dvode.f
Codes/Kinetics/TChem/src/: Makefile  TC_chg.c  TC_dnd.c  TC_edit.c  TC_for.c  TC_getthc9.c  TC_info.c  TC_init.c  TC_jac.c  TC_kmodint.c  TC_mlms.c  TC_reduce.cpp  TC_rr.c  TC_rr.c.prog  TC_rr.save  TC_rr.save2  TC_spec.c  TC_src.c  TC_src.old  TC_thermo.c  TC_utils.c
Codes/Kinetics/active_subspace/grad/: README
Codes/Kinetics/active_subspace/kinetics_test/: active_subspace.m  local_linear_approx.m  pts_grad.txt  pts_grad_free.txt  record_id_grad.txt  record_id_grad_free.txt  run_tests.m
Codes/Kinetics/data_files/: notes.txt  pts_rng10.txt  pts_rng20.txt  pts_rng30.txt  pts_rng40.txt
Codes/Kinetics/new_lean_mix/: mu10.mat  mu15.mat  mu20.mat  mu5.mat  record_id_rng10.txt  record_id_rng20.txt  record_id_rng30.txt  record_id_rng40.txt  ub10.mat  ub15.mat  ub20.mat  ub5.mat
Codes/Kinetics/new_lean_mix/PCE3D/: X.mat  Y.mat  build_pce.m  gen_samples3D.m  gen_smooth.m  ig_surf.mat  pts_val.txt  record_id_smooth_lean.txt  record_id_val.txt  rel_L2.txt
Codes/Kinetics/new_rich_mix/: mu10.mat  mu15.mat  mu20.mat  mu5.mat  record_id_rng10.txt  record_id_rng20.txt  record_id_rng30.txt  record_id_rng40.txt  ub10.mat  ub15.mat  ub20.mat  ub5.mat
Codes/Kinetics/new_rich_mix/PCE4D/: X.mat  Y.mat  build_pce.m  convert_19D_4D.m  gen_plots.m  gen_samples4D.m  ig_surf.mat  pts_pce4D_19D.txt  pts_smooth_rich.txt  record_id_smooth_rich.txt  record_id_val.txt  rel_L2.txt
Codes/MD/: README  combine_Lr.m  combine_energy.m  combine_params.m  compute_k.m  create_sw.bash  extract_Lr.bash  extract_energy.bash  gen_samples.m  input_params.yml  k_from_MD.py  plot_time_lx.py  screen.m  ub.m  write_params.m
Codes/MD/PCE2D/: README  err_k.py  error2D_quad.m  input_params.yml
Codes/MD/PCE5D/: Lr_1_40.txt  Lr_41_80.txt  README  build_pce.m  energy_1_40.txt  energy_41_80.txt  err_samples.txt  faulty_pts.txt  gen_samples.m  k_1_40.txt  k_41_80.txt  params.txt  params_1_39.txt  params_41_80.txt  seeds.txt
Codes/MD/PCE5D/sw_files_1_40/: Si1.sw  Si10.sw  Si11.sw  Si12.sw  Si13.sw  Si14.sw  Si15.sw  Si16.sw  Si17.sw  Si18.sw  Si19.sw  Si2.sw  Si20.sw  Si21.sw  Si22.sw  Si23.sw  Si24.sw  Si25.sw  Si26.sw  Si27.sw  Si28.sw  Si29.sw  Si3.sw  Si30.sw  Si31.sw  Si32.sw  Si33.sw  Si34.sw  Si35.sw  Si36.sw  Si37.sw  Si38.sw  Si39.sw  Si4.sw  Si40.sw  Si5.sw  Si6.sw  Si7.sw  Si8.sw  Si9.sw
Codes/MD/PCE5D/sw_files_41_80/: Si1.sw  Si10.sw  Si11.sw  Si12.sw  Si13.sw  Si14.sw  Si15.sw  Si16.sw  Si17.sw  Si18.sw  Si19.sw  Si2.sw  Si20.sw  Si21.sw  Si22.sw  Si23.sw  Si24.sw  Si25.sw  Si26.sw  Si27.sw  Si28.sw  Si29.sw  Si3.sw  Si30.sw  Si31.sw  Si32.sw  Si33.sw  Si34.sw  Si35.sw  Si36.sw  Si37.sw  Si38.sw  Si39.sw  Si4.sw  Si40.sw  Si5.sw  Si6.sw  Si7.sw  Si8.sw  Si9.sw
Codes/MD/PCE7D/: README  build_pce.m  c_energy_Lr.m  combine_k_p.m  gen_samples.m
Codes/MD/active_subspace/: ActiveSubspaceCh1.pdf1  get_polyfit_surrogate.m  init_1D.m  init_2D.m  init_3D.m  params_30.txt  params_35.txt  subspace.m  test_borehole.py  test_sub.m
Codes/MD/rescreen/: k_data15.txt  k_data20.txt  k_data25.txt  k_data30.txt  k_data35.txt  screen15.m  screen20.m  screen25.m  screen30.m  screen35.m  ub15.mat  ub20.mat  ub25.mat  ub30.mat  ub35.mat
Codes/Morris/: Sobol_conv.mat  gen_plots_Morris.m  itr_indices.txt  red_mor.m  test_redmor.m  test_redmor2D.m
Codes/Morris/morris2D/: red_mor2D.m  test_redmor2D.m
Codes/Oscillator/: STi_conv.mat  X_uqlab.mat  conv_analysis.txt  gen_plots_oscillator.m  nsams_ub.txt  oscillator.m  ub1_conv.m  ub_conv_oscillator.eps
Codes/Oscillator/oscillator3D/: model_oscillator.m  model_oscillator3D.m  oscillator3D.m  pdf_comp_oscillator.eps  val_pts.mat
Codes/Oscillator/oscillator4D/: model_oscillator4D.m  oscillator4D.m
Paper/: DGSM_PCE_MD_paper.tex  DGSM_surrogate_paper.tex  REFER.bib  abstract.tex  ack.tex  app.tex  bg.tex  cover.tex  def.tex  disc.tex  examples.tex  figures.tex  gen_outline.sh  intro.tex  makefile  method.tex  outline.tex  paper.tex
Paper/revision/: makefile  reviewer_replies.tex
Paper/revision/source_files/: DGSM_surrogate_paper.aux  DGSM_surrogate_paper.bbl  DGSM_surrogate_paper.blg  DGSM_surrogate_paper.out  REFER.bib  abstract.tex  ack.tex  app.tex  cover.tex  def.tex  disc.tex  examples.tex  intro.tex  makefile  method.tex
Slides/: dgsm_pce.tex  gen_slides.sh
Slides/animation/: trim.bash
(+71 files in other folders)
